大幅改进iOS IPA打包流程
 主要改进：
- 使用最新稳定版Flutter (自动支持Dart SDK 3.7.0+)
- 创建专用IPA打包脚本 (.github/scripts/create_ipa.sh)
- 恢复pubspec.yaml SDK要求为>=3.7.0 (支持extended_image ^10.0.1)
- 添加详细构建日志和错误检查
- 确保生成标准IPA文件而非文件夹

 技术改进：
- 自动检查Runner.app存在性
- 改进zip压缩逻辑
- 添加文件验证步骤
- 统一两个workflow的打包流程

现在应该能正确生成可安装的IPA文件了！

--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -42,8 +42,7 @@ jobs:
       - name: 🔧 Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: "3.27.1" # 使用最新稳定版本，支持Dart SDK 3.7.0+
-          channel: "stable"
+          channel: "stable" # 使用最新稳定版本，自动支持最新Dart SDK
           cache: true
 
       - name: 📋 Flutter doctor
@@ -79,20 +78,14 @@ jobs:
       - name: 📁 Create IPA (Debug)
         if: ${{ github.event.inputs.build_type == 'debug' || github.event.inputs.build_type == '' }}
         run: |
-          cd build/ios/iphoneos
-          mkdir -p Payload
-          cp -r Runner.app Payload/
-          zip -r ovofun-debug.ipa Payload/
-          mv ovofun-debug.ipa ../../../
+          chmod +x .github/scripts/create_ipa.sh
+          ./.github/scripts/create_ipa.sh debug ovofun
 
       - name: 📁 Create IPA (Release)
         if: ${{ github.event.inputs.build_type == 'release' }}
         run: |
-          cd build/ios/iphoneos
-          mkdir -p Payload
-          cp -r Runner.app Payload/
-          zip -r ovofun-release.ipa Payload/
-          mv ovofun-release.ipa ../../../
+          chmod +x .github/scripts/create_ipa.sh
+          ./.github/scripts/create_ipa.sh release ovofun
 
       - name: 📊 Build info
         run: |
