--- a/.github/workflows/ios-build-simple.yml
+++ b/.github/workflows/ios-build-simple.yml
@@ -4,46 +4,44 @@ on:
   workflow_dispatch:
     inputs:
       flutter_version:
-        description: 'Flutter版本'
+        description: "Flutter版本"
         required: false
-        default: '3.27.1'
+        default: "stable"
 
 jobs:
   ios-build:
     runs-on: macos-latest
-    
+
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
-      
-    - name: Setup Flutter
-      uses: subosito/flutter-action@v2
-      with:
-        flutter-version: ${{ github.event.inputs.flutter_version || '3.27.1' }}
-        channel: 'stable'
-        
-    - name: Flutter Dependencies
-      run: |
-        flutter pub get
-        
-    - name: iOS Dependencies  
-      run: |
-        cd ios
-        pod install
-        
-    - name: Build iOS
-      run: |
-        flutter build ios --no-codesign --debug
-        
-    - name: Package IPA
-      run: |
-        cd build/ios/iphoneos
-        mkdir Payload
-        cp -r Runner.app Payload/
-        zip -r ../../../ovofun-ios.ipa Payload/
-        
-    - name: Upload IPA
-      uses: actions/upload-artifact@v4
-      with:
-        name: ovofun-ios-app
-        path: ovofun-ios.ipa
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: ${{ github.event.inputs.flutter_version || 'stable' }}
+          channel: "stable"
+
+      - name: Flutter Dependencies
+        run: |
+          flutter pub get
+
+      - name: iOS Dependencies
+        run: |
+          cd ios
+          pod install
+
+      - name: Build iOS
+        run: |
+          flutter build ios --no-codesign --debug
+
+      - name: Package IPA
+        run: |
+          chmod +x .github/scripts/create_ipa.sh
+          ./.github/scripts/create_ipa.sh debug ovofun-ios
+
+      - name: Upload IPA
+        uses: actions/upload-artifact@v4
+        with:
+          name: ovofun-ios-app
+          path: ovofun-ios-debug.ipa
