修复iOS构建的Generated.xcconfig问题
 问题解决：
- 修复'Generated.xcconfig must exist'错误
- 在flutter clean后重新生成Flutter配置文件
- 创建专用的iOS配置修复脚本

 技术改进：
- 添加.github/scripts/fix_ios_config.sh配置修复脚本
- 自动检查和生成必要的iOS配置文件
- 在Pod install前确保所有配置文件存在
- 添加详细的调试日志以便问题排查

 修复内容：
- 主构建workflow (ios-build.yml)
- 简单构建workflow (ios-build-simple.yml)
- 如果配置文件不存在会自动创建基础配置

现在GitHub Actions应该能成功完成Pod install步骤！

--- a/.github/workflows/ios-build-simple.yml
+++ b/.github/workflows/ios-build-simple.yml
@@ -26,9 +26,17 @@ jobs:
         run: |
           flutter pub get
 
+      - name: 🔄 Fix iOS Configuration
+        run: |
+          chmod +x .github/scripts/fix_ios_config.sh
+          ./.github/scripts/fix_ios_config.sh
+
       - name: iOS Dependencies
         run: |
+          echo "=== Pod 安装 ==="
           cd ios
+          echo "检查Flutter配置文件:"
+          ls -la Flutter/Generated.xcconfig || echo "配置文件不存在"
           pod install
 
       - name: Build iOS
