--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: macos-latest
 
     steps:
-      - name: Checkout repository code
+      - name: Checkout repository
         uses: actions/checkout@v3
 
       - name: Set up Flutter
@@ -30,13 +30,22 @@ jobs:
           rm -rf ios/Pods ios/Podfile.lock ios/.symlinks
           rm -rf ~/Library/Developer/Xcode/DerivedData/*
 
-      - name: Install Flutter dependencies
-        run: flutter pub get
+      # 🔑 使用锁定的依赖版本
+      - name: Install Flutter dependencies (locked)
+        run: flutter pub get --enforce-lockfile
 
+      # 🔑 修改 Podfile 里的最低版本 & 安装 Pods
       - name: Install CocoaPods dependencies
         run: |
           cd ios
-          pod install --verbose
+          # 确保 Podfile 存在且 platform >= 12.0
+          if ! grep -q "platform :ios" Podfile; then
+            echo "platform :ios, '12.0'" > Podfile.tmp
+            cat Podfile >> Podfile.tmp
+            mv Podfile.tmp Podfile
+          fi
+          sed -i '' "s/platform :ios, *'[^']*'/platform :ios, '12.0'/" Podfile
+          pod install --repo-update
 
       - name: Build iOS (unsigned)
         run: |
