--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Install Flutter dependencies
         run: flutter pub get
 
-      # 🔑 修改 Runner.xcodeproj 部署版本
+      # 🔑 修改 Runner.xcodeproj 的最低 iOS 版本为 13.0
       - name: Force Runner project to iOS 13.0
         run: |
           cd ios
@@ -47,10 +47,11 @@ jobs:
             puts "✅ Runner.xcodeproj updated to iOS 13.0"
           '
 
-      # 🔑 Pods 强制到 iOS 13.0
-      - name: Force iOS 13.0 for all Pods
+      # 🔑 强制 Pods 全部改成 iOS 13.0
+      - name: Force all Pods to iOS 13.0
         run: |
           cd ios
+          # 修改 Podfile
           if ! grep -q "platform :ios" Podfile; then
             echo "platform :ios, '13.0'" > Podfile.tmp
             cat Podfile >> Podfile.tmp
@@ -58,6 +59,7 @@ jobs:
           fi
           sed -i '' "s/platform :ios, *'[^']*'/platform :ios, '13.0'/" Podfile
 
+          # 替换所有 podspec 里的低版本
           find Pods -name '*.podspec.json' -o -name '*.podspec' | while read spec; do
             sed -i '' 's/ios.*9.0/ios, "13.0"/g' "$spec" || true
             sed -i '' 's/ios.*10.0/ios, "13.0"/g' "$spec" || true
@@ -67,18 +69,29 @@ jobs:
 
           pod install --repo-update
 
+      # 🔑 构建 iOS 未签名包，并保存日志
       - name: Build iOS (unsigned)
         run: |
           cd ios
-          xcodebuild build \
+          set -o pipefail && xcodebuild build \
             -workspace Runner.xcworkspace \
             -scheme Runner \
             -configuration Release \
             -sdk iphoneos \
             -derivedDataPath build/DerivedData \
-            CODE_SIGNING_ALLOWED=NO CODE_SIGNING_REQUIRED=NO
+            CODE_SIGNING_ALLOWED=NO CODE_SIGNING_REQUIRED=NO \
+            | tee xcode_build.log | xcpretty || true
+        continue-on-error: true
 
+      - name: Upload Xcode build log
+        uses: actions/upload-artifact@v4
+        with:
+          name: xcode-build-log
+          path: ios/xcode_build.log
+
+      # 🔑 打包 IPA
       - name: Package IPA
+        if: success()
         run: |
           APP_PATH="ios/build/DerivedData/Build/Products/Release-iphoneos/Runner.app"
           if [ ! -d "$APP_PATH" ]; then
@@ -93,6 +106,7 @@ jobs:
           echo "✅ IPA generated: $(pwd)/FlutterApp.ipa"
 
       - name: Upload IPA
+        if: success()
         uses: actions/upload-artifact@v4
         with:
           name: flutter-ios-ipa
