--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -33,10 +33,10 @@ jobs:
       - name: Install Flutter dependencies
         run: flutter pub get
 
-      - name: Re-install CocoaPods
+      - name: Re-install CocoaPods with iOS 13 forced
         run: |
           cd ios
-          # 确保 Podfile 设置 iOS 13
+          # 确保 Podfile 有 platform :ios, '13.0'
           if ! grep -q "platform :ios" Podfile; then
             echo "platform :ios, '13.0'" > Podfile.tmp
             cat Podfile >> Podfile.tmp
@@ -44,14 +44,26 @@ jobs:
           fi
           sed -i '' "s/platform :ios, *'[^']*'/platform :ios, '13.0'/" Podfile
 
-          # 删除旧的 Pods 并重新安装，保持 Podfile.lock 同步
-          rm -rf Pods Podfile.lock .symlinks
+          # 在 Podfile 添加 post_install 钩子
+          if ! grep -q "post_install do" Podfile; then
+            cat >> Podfile <<'EOF'
+
+post_install do |installer|
+  installer.pods_project.targets.each do |target|
+    target.build_configurations.each do |config|
+      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '13.0'
+    end
+  end
+end
+EOF
+          fi
+
           pod install --repo-update
 
       - name: Build iOS Archive
         run: |
           cd ios
-          DISABLE_FLUTTER_BUILD_SCRIPT=1 \
+          export DISABLE_FLUTTER_BUILD_SCRIPT=1
           xcodebuild -workspace Runner.xcworkspace \
             -scheme Runner \
             -configuration Release \
